<resources>
    <string name="app_name">这是个好玩的东西</string>
    <string name="app_title">功能菜单</string>

    <!--Menu-->
    <string name="app_menu_statusBar">状态栏</string>
    <string name="app_menu_immersiveStatusBar">沉浸式状态栏</string>
    <string name="app_menu_butterKnife">注解器</string>
    <string name="app_menu_alignedText">对齐的文本</string>
    <string name="app_menu_permission">权限请求</string>
    <string name="app_menu_recycleView">列表展示</string>
    <string name="app_menu_recycleView_menu">多种列表展示</string>

    <!--ButterKnife-->
    <string name="app_butterKnife_title">注解器</string>
    <string name="app_butterKnife_str">使用注解器真的是太方便了！！！(点我看看)</string>

    <!--StatusBarActivity-->
    <string name="app_statusBar_choose_statusBar">状态栏样式选择</string>
    <string name="app_statusBar_normal_statusBar">普通状态栏(默认)</string>
    <string name="app_statusBar_immersive_statusBar">沉浸式状态栏</string>
    <string name="app_statusBar_remark">请注意观察上方状态栏样式哦</string>
    <string name="app_statusBar_recall">取消沉浸式</string>
    <string name="app_statusBar_immersive_statusBar_third">沉浸式状态栏(引用三方)</string>

    <!--AlignedText-->
    <string name="app_alignedText_choose_alignedText">文本框样式选择</string>
    <string name="app_alignedText_normal">普通文本框</string>
    <string name="app_alignedText_alignTextView">切割型文本框</string>
    <string name="app_alignedText_EnglishTextView">保留英文完整性文本框</string>
    <string name="app_alignedText_remark">请注意观察上方各种文本框样式区别,按需求选取</string>
    <string name="app_alignedText_text">During the operation of the Long March 5 rocket engine, the high temperature, narrow space and complex structure of the gas pipeline may lead to the failure of the surrounding electronic and electrical equipment. The high performance nano aerogel insulation felt manufactured by the 306 Aerospace Science and Technology Institute successfully solved this problem.</string>

    <!--Permission-->
    <string name="app_permission">权限请求</string>
    <string name="app_permission_normal">普通权限请求</string>
    <string name="app_permission_third">权限请求(引用三方)</string>

    <!--RecycleView-->
    <string name="app_recycleView_node">抽屉式列表</string>

</resources>
