<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/sw_dp_50"
        android:gravity="center"
        android:background="@color/colorTitle"
        android:layout_marginBottom="@dimen/sw_dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorTitleText">
        </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/sw_dp_10"
        android:layout_marginEnd="@dimen/sw_dp_10"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sw_dp_50">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_menu_statusBar"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorMenuText">
            </TextView>

            <View
                android:layout_width="@dimen/sw_dp_1"
                android:layout_height="match_parent"
                android:background="@color/colorMenuLine"
                android:layout_marginTop="@dimen/sw_dp_5"
                android:layout_marginBottom="@dimen/sw_dp_5"
                android:layout_marginStart="@dimen/sw_dp_10">
            </View>

            <LinearLayout
                android:id="@+id/main_immersiveStatusBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_menu_immersiveStatusBar"
                    android:textSize="15sp"
                    android:textColor="@color/colorMenuText">
                </TextView>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/sw_dp_1"
            android:background="@color/colorMenuLine">
        </View>
    </LinearLayout>

</LinearLayout>